[feat] migrate test code to production and implement entity creation/update logic